--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tradingx",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@linaria/babel-preset": "^3.0.0-beta.1",
     "@linaria/core": "^3.0.0-beta.1",
